--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,96 @@
 body{
     margin: 0;
-    font-family: system-ui;
+    font-family:'Inter', system-ui;
     background-color: #e7f6ff;
+    list-style: none;
+}
+
+.wrapper{
+    background: #FFFFFF;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04);
+    border-radius: 20px;
+    max-width: 1080px;
+    margin: 50px auto;
+    box-sizing: border-box; 
+    outline: none;
+
+    header{
+        display: flex;
+        padding: 40px;
+        justify-content:space-between;
+        align-items: center;
+        padding: 40px;
+        border-bottom: 1px solid #EAEAEA;
+        .headerInfo{
+            p{
+                opacity: 0.5;
+            }
+        }
+        .headerLeft{
+            display: flex;
+            align-items: center;
+                img{
+                    margin-right: 15px;
+                }
+                h3,p{
+                    margin: 0;
+                }
+            }
+        .headerRight{
+            display: flex;
+            list-style: none;
+            .cart-info, .favorite-info{
+                margin-right: 30px;
+                .cart-img{
+                    margin-right: 10px;
+                }
+            }
+        }
+    }
+    .content{
+        padding: 40px;
+        h1{
+            margin-bottom: 40px;
+        }
+        .sneakers{
+            display: flex;
+        }
+        .card{
+            margin-right: 30px;
+            border: 1px solid #f3f3f3; 
+            padding: 30px;
+            width: 220px;
+            border-radius: 40px;
+            h5{
+                font-weight: 400;
+                font-size: 14px;
+            }
+            .card-info{
+                align-items: center;
+                display: flex;
+                justify-content: space-between;
+                span{
+                    font-size: 12px;
+                    opacity: 0.5;
+                    text-transform: uppercase;
+                }
+                b{
+                    font-size: 14px;
+                }
+                &-price{
+                display: flex; 
+                flex-direction: column;
+                } 
+                .card-add-btn{
+                    background: #FFFFFF;
+                    border: 1px solid #f2f2f2;
+                    box-sizing: border-box;
+                    border-radius: 8px;
+                    height: 32px;
+                    width: 32px;
+                    cursor: pointer;
+                }
+            }
+        }
+    }
 }
