--- a/src/index.scss
+++ b/src/index.scss
@@ -4,7 +4,11 @@ body{
     list-style: none;
 }
 *{
-    font-family:'Inter', system-ui; 
+    font-family:'Inter', system-ui;
+}
+a{
+    text-decoration: none;
+    color: #333;
 }
 
 .wrapper{
