--- a/src/components/CartDrawer/CardDrawer.scss
+++ b/src/components/CartDrawer/CardDrawer.scss
@@ -119,6 +119,9 @@ ul{
 
 .cart_empty{
     text-align: center;
+    &_info{
+        margin-top: 50%;
+    }
     &_text{
         opacity: 0.6;
     }
@@ -143,7 +146,7 @@ ul{
         background: darken(#9DD558, 5%);
     }
         img{
-           margin-right: 15px;
+            margin-right: 15px;
             transform:  rotate(-180deg);
         }
     }
