--- a/src/components/CartDrawer/CardDrawer.scss
+++ b/src/components/CartDrawer/CardDrawer.scss
@@ -6,6 +6,17 @@
     height: 100%;
     background-color: rgba(0,0,0, 0.5);
     z-index: 1;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+    overflow: hidden;
+    &_visible{
+        visibility: visible;
+        opacity: 1;
+        .drawer{
+            transform: translateX(0);
+        }
+    }
 }
     .drawer{
         position: absolute;
@@ -16,6 +27,8 @@
         box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
         display: flex;
         flex-direction: column;
+        transform: translateX(100%);
+        transition: transform 0.3s ease-in-out;
     }
         .cart{
             padding: 30px;
