--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -48,3 +48,19 @@
         }
     }
 }
+@media (max-width: 768px) {
+    .card{
+        width: 110px;
+        .card_img{
+            width: 100px;
+            height: 80px;
+        }
+    }
+}
+@media (max-width: 500px) {
+    .card{
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+    }
+}
